--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,31 +56,41 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Navmesh\NavmeshAssetManager.cs" />
-     <Compile Include="Assets\Navmesh\NavMeshComponentsGUIUtility.cs" />
-     <Compile Include="Assets\Navmesh\NavmeshLink.cs" />
-     <Compile Include="Assets\Navmesh\NavMeshLinkEditor.cs" />
-     <Compile Include="Assets\Navmesh\NavMeshModifier.cs" />
-     <Compile Include="Assets\Navmesh\NavmeshModifierEditor.cs" />
-     <Compile Include="Assets\Navmesh\NavMeshModifierVolume.cs" />
-     <Compile Include="Assets\Navmesh\NavMeshModifierVolumeEditor.cs" />
-     <Compile Include="Assets\Navmesh\NavMeshSurface.cs" />
-     <Compile Include="Assets\Navmesh\NavMeshSurfaceEditor.cs" />
+     <Compile Include="Assets\Prefabs\Navmesh\NavmeshAssetManager.cs" />
+     <Compile Include="Assets\Prefabs\Navmesh\NavMeshComponentsGUIUtility.cs" />
+     <Compile Include="Assets\Prefabs\Navmesh\NavmeshLink.cs" />
+     <Compile Include="Assets\Prefabs\Navmesh\NavMeshLinkEditor.cs" />
+     <Compile Include="Assets\Prefabs\Navmesh\NavMeshModifier.cs" />
+     <Compile Include="Assets\Prefabs\Navmesh\NavmeshModifierEditor.cs" />
+     <Compile Include="Assets\Prefabs\Navmesh\NavMeshModifierVolume.cs" />
+     <Compile Include="Assets\Prefabs\Navmesh\NavMeshModifierVolumeEditor.cs" />
+     <Compile Include="Assets\Prefabs\Navmesh\NavMeshSurface.cs" />
+     <Compile Include="Assets\Prefabs\Navmesh\NavMeshSurfaceEditor.cs" />
      <Compile Include="Assets\Scripts\Battle\BattleHUD.cs" />
-     <Compile Include="Assets\Scripts\Battle\BattleSystem.cs" />
      <Compile Include="Assets\Scripts\Battle\Bioware.cs" />
      <Compile Include="Assets\Scripts\Battle\Hacker.cs" />
+     <Compile Include="Assets\Scripts\Battle\Level1\BattleMachine.cs" />
+     <Compile Include="Assets\Scripts\Battle\Level1\Enemy.cs" />
+     <Compile Include="Assets\Scripts\Battle\Level1\StartLevel1.cs" />
+     <Compile Include="Assets\Scripts\Battle\Level2\BattleMachine2.cs" />
+     <Compile Include="Assets\Scripts\Battle\Level2\StartLevel2.cs" />
+     <Compile Include="Assets\Scripts\Battle\Level2\Virus3.cs" />
+     <Compile Include="Assets\Scripts\Battle\Level3\BattleMachine3.cs" />
+     <Compile Include="Assets\Scripts\Battle\Level3\Enemy3.cs" />
+     <Compile Include="Assets\Scripts\Battle\Level3\StartBattle3.cs" />
+     <Compile Include="Assets\Scripts\Battle\Level3\Virus2.cs" />
+     <Compile Include="Assets\Scripts\Battle\Level3\Virus3Again.cs" />
      <Compile Include="Assets\Scripts\Battle\Mago.cs" />
-     <Compile Include="Assets\Scripts\Battle\StartBattle.cs" />
+     <Compile Include="Assets\Scripts\Battle\Player.cs" />
      <Compile Include="Assets\Scripts\Battle\States.cs" />
      <Compile Include="Assets\Scripts\Battle\Unit.cs" />
      <Compile Include="Assets\Scripts\Battle\Virus1.cs" />
-     <Compile Include="Assets\Scripts\Battle\Virus2.cs" />
      <Compile Include="Assets\Scripts\Data\Enums.cs" />
      <Compile Include="Assets\Scripts\Data\EventController.cs" />
      <Compile Include="Assets\Scripts\Data\Fight.cs" />
      <Compile Include="Assets\Scripts\Data\GameEvents.cs" />
      <Compile Include="Assets\Scripts\Data\InputData.cs" />
+     <Compile Include="Assets\Scripts\Data\NewPlayableAsset.cs" />
      <Compile Include="Assets\Scripts\Data\RandomState.cs" />
      <Compile Include="Assets\Scripts\Data\ScoreData.cs" />
      <Compile Include="Assets\Scripts\FSM\Controllers\Battle.cs" />
@@ -119,6 +129,7 @@
      <Compile Include="Assets\Scripts\FSM\States\StealingState.cs" />
      <Compile Include="Assets\Scripts\GameElements\Follow.cs" />
      <Compile Include="Assets\Scripts\GameElements\FollowNegativ.cs" />
+     <Compile Include="Assets\Scripts\GameElements\FollowOne.cs" />
      <Compile Include="Assets\Scripts\GameElements\LifeTree.cs" />
      <Compile Include="Assets\Scripts\GameElements\Teleport.cs" />
      <Compile Include="Assets\Scripts\GameElements\TeleportBack.cs" />
